# nyu-core

./: .gitignore  CMakeLists.txt  CPU General Purpose Registers  CPUGeneralPurposeRegisters.md  ReadMe.md  dev-test-process.md  vcpkg-configuration.json  vcpkg.json
.github/workflows/: main.yaml
Documentation/: dev-test-process.md
Documentation/00_Dev_and_Test_Docs/: 00_Getting_Started_with_Core.md  01_dev-test-process.md  0_Getting_Started_with_Core.md  dev-test-process.md
Documentation/01_Module_Docs/: 00_CPU_general_purpose_registers.md  01_IF_ID_latch.md  02_ID_EX_Latch.md  03_EX_MEM_Latch.md  05_General_Control_Module.md  06_Branch_Evaluator.md  07_Data_Cache_Manager.md  08_Pipeline_Reset_Module.md  08_Processor_State.md  09_ALU.md  10_L1_Data_Cache.md  12_L3_Data_Cache.md  13_Instruction_Cache_Manager.md  14_L1_Instruction_Cache.md  15_Program_Counter.md  16_Branch_Predictor.md  17_Branch_Address_Calculator.md  18_Branch_Manager.md  19_CSR_Counters.md  19_CSR_Counters_And_Registers.md
Documentation/02_Complex_Module_Functions/: 00_Branch_Prediction_Module.md  01_General-Control-Module.md  01_General_Control_Module.md  02_L1_Instruction_Cache.md  03_L1_Data_Cache.md
Documentation/03_Interface_Docs/: 00_ID_Interface.md  02_MEM_Interface.md  03_Branch_Manager_Input.md  04_Data_Cache_Manager_Control.md  05_ALU_Operands.md  06_Desitation_Register_Info.md  06_Destination_Register_Info.md  07_Source_Register_Numbers.md  08_Source_Register_Data.md  09_Instruction_Cache_Bus  10_Flush_Bus.md  interface_doc_template.md
Documentation/04_Connecting_Module_Docs/: 00_Top_Level.md  01_Instruction_Cache.md  02_Data_Cache.md  03_IF_Connection_Module.md  04_ID_Connection_Module.md  04_ID_WB_Connection_Module.md  05_EX_Connection_Module.md  06_MEM_Connection_Module.md  07_Branching_Control_Connection_Module  07_Branching_Control_Connection_Module.md  connecting_doc_template.md
Documentation/Complex-Module-Functions/: Branch-Prediction-Module.md  General-Control-Module  General-Control-Module.md
Documentation/Connecting-Module-Docs/: connecting_doc_template.md
Documentation/Dev-and-Test-Docs/: dev-test-process.md
Documentation/Interface-Docs/: 00_ID_Interface.md  01_EX_Interface.md  interface_doc_template.md
Documentation/Interface_Docs/: Interface_doc_template.md
Documentation/Module-Docs/: 00_CPU_general_purpose_registers.md  01_IF_ID_latch.md  02_ID_EX_Latch.md  03_EX_MEM_Latch.md  04_MEM_WB_Latch.md  05_General_Control_Module.md  06_Branch_Evaluator.md  08_Processor_State.md  09_ALU.md  11_L2_Data_Cache.md  13_Instruction_Cache_Manager.md  15_Program_Counter.md  16_Branch_Predictor.md  17_Branch_Address_Calculator.md  18_Branch_Manager.md  19_Data_Cache_Manager.md  doc_template.md  module_doc_template.md
Documentation/Module_Docs/: 07_Hazard_Detection.md
Documentation/module_functionality/: 01_IF_ID_latch.md  06_Branch_Evaluator.md  09_ALU.md  doc_template.md
cancled modules/: Imm_extender.sv
dv/: CMakeLists.txt  L1 Instruction Cache  alu.cpp  branch_addr_calc.cpp  branch_eval.cpp  branch_manager.cpp  branch_predictor.cpp  con_branch_cont.cpp  con_branch_control.cpp  con_ex.cpp  con_id.cpp  data_cache_manager.cpp  exmem.cpp  gpr.cpp  idex.cpp  ifid.cpp  imm_extender.cpp  l1_data_cache.cpp  memwb.cpp  pc.cpp  pipeline_reset.cpp
dv/sVerilogTests/: L1_Data_Cache.sv
module_functionality/: 00_CPU_general_purpose_registers.md  01_IF_ID_latch.md  04_MEM_WB_Latch.md  05_General_Control_Module.md  EX_MEM_Latch.md  doc_template.md
rtl/: Alu.sv  Alu_Ops.sv  Branch_Addr_Calc.sv  Branch_Eval.sv  Branch_Manager.sv  Branch_Manager_Input.sv  Branch_Predictor.sv  CMakeLists.txt  Con_Branch_Cont.sv  Con_Branching_Control.sv  Con_EX.sv  Con_ID.sv  DCache_Manager_Control.sv  DReg_Info.sv  Data_Cache_Manager.sv  Data_Cache_Manager_Control.sv  EXMEM.sv  GPR.sv  General_Control_Module.sv  ID.sv  IDEX.sv  IFID.sv  Imm_extender.sv  Int_Alu_Ops.sv  Int_Branch_Manager_Input.sv  Int_DCache_Manager_Control.sv  Int_DReg_Info.sv  Int_ID.sv  Int_MEM.sv  Int_SReg_Nums.sv  L1_Data_Cache.sv  L1_Instruction_Cache.sv  MEM.sv  MEMWB.sv  PC.sv  Pipeline_Reset.sv  SReg_Nums.sv
rtl/on hold/: Int_Branch_Manager_Input.sv  Int_ID.sv  Int_MEM.sv  Int_SReg_Nums.sv
